--- a/home.html
+++ b/home.html
@@ -42,12 +42,12 @@
         </div>
 
         <div class="chips-container">
-            <a href="404.html" target="_blank" style="text-decoration: none;" class="chip">Trip</a>
-            <a href="404.html" target="_blank" style="text-decoration: none;" class="chip">Deals</a>
-            <a class="chip" style="background-color: #07689f; color:white; border: none;">Hotel</a>
-            <a href="index.html" target="_blank" style="text-decoration: none;" class="chip">Flight</a>
-            <a href="404.html" target="_blank" style="text-decoration: none;" class="chip">Apartment</a>
-            <a href="404.html" target="_blank" style="text-decoration: none;" class="chip">Camper</a>
+            <a href="#" target="_blank" style="text-decoration: none;" class="chip">Trip</a>
+            <a href="#" target="_blank" style="text-decoration: none;" class="chip">Deals</a>
+            <a class="#" style="background-color: #07689f; color:white; border: none;">Hotel</a>
+            <a href="#" target="_blank" style="text-decoration: none;" class="chip">Flight</a>
+            <a href="#" target="_blank" style="text-decoration: none;" class="chip">Apartment</a>
+            <a href="#" target="_blank" style="text-decoration: none;" class="chip">Camper</a>
         </div>
     </header>
     <main class="main">
